# pc2mesh

./: .gitmodules  CMakeLists.txt
contrib/: CMakeLists.txt
contrib/Open3D-PoissonRecon/Src/: FEMTree.Initialize.inl  FEMTree.System.inl  MyMiscellany.h
contrib/cli/: CMakeLists.txt  Cargo.toml
contrib/cli/include/pc2mesh/: cli.h
contrib/cli/src/: lib.rs
contrib/include/pc2mesh/geometry/: kdtree_flann.hpp  kdtree_param.hpp
contrib/include/pc2mesh/poisson/: poisson.hpp
contrib/include/tomasakeninemoeller/: opttritri.h  tribox3.h
contrib/offload/include/offload/: norm_estimation.hpp  test.h
contrib/offload/src/: norm_estimation.cpp  test.cpp
contrib/src/: kdtree_flann.cpp
include/pc2mesh/geometry/: ball_pivoting.hpp  intersection.hpp  point_cloud.hpp  poisson.hpp  triangle_mesh.hpp  triangle_mesh2dae.hpp
include/pc2mesh/utilities/: eigen.h  eigen.hpp  ply_parser.hpp  timer.hpp
scripts/: gen_cube.py  gen_sphere.py
src/: ball_pivoting.cpp  main.cpp  plyParser.cpp  plyParser.h  ply_parser.cpp  point_cloud.cpp  poisson.cpp  triangle_mesh2dae.cpp  util.cpp  util.h
